# 7150-CEM-Data-Science-Project-

./: CODING - Data Science Project.docx  LICENSE  Makefile  README.md  manifest.json  pyproject.toml
reports/: report.md
scripts/: 01_extract_matches.py  02_build_features.py  03_wp_pipeline.py  04_figures_ind_pak.py  _entrypoints.py
src/t20/: __init__.py
